admin new methods + GET /me
