# RacingGuru/internal/controller/handlers/swagger_types.go
@@ -29,6 +29,13 @@ type UpdateUserRoleRequest struct {
 	Role models.Role `json:"role" enums:"admin,user" example:"admin"`
 }
 
+type AdminUserResponse struct {
+	Id    string      `json:"id" example:"77777777-7777-7777-7777-777777777777"`
+	Name  string      `json:"name" example:"Max Verstappen"`
+	Email string      `json:"email" example:"user@example.com"`
+	Role  models.Role `json:"role" enums:"admin,user" example:"user"`
+}
+
 type ChangePasswordRequest struct {
 	Password string `json:"password" example:"newSecret123"`
 }
