# RacingGuru/internal/models/car.go
@@ -1,0 +1,9 @@
+package models
+
+import "github.com/google/uuid"
+
+type Car struct {
+	Id    uuid.UUID `json:"id"`
+	Model string    `json:"model"`
+	Year  int       `json:"year"`
+}
