# RacingGuru/internal/models/championship.go
@@ -1,0 +1,8 @@
+package models
+
+import "github.com/google/uuid"
+
+type Championship struct {
+	Id   uuid.UUID `json:"id"`
+	Year int       `json:"year"`
+}
